--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/whatsapp.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hyerdev Desafio</title>
+    <title>Whatsapp</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/App.tsx"></script>
   </body>
 </html>
